[package]
name = "nexo-poller-ext"
description   = "Extension integration for the Nexo poller runtime."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
# Bridge crate — adapts an `nexo-extensions::StdioRuntime` (a
# subprocess speaking JSON-RPC over stdio) into an
# `nexo_poller::Poller` impl. Lets operators write poller modules
# in any language (Python, Bash, Go, …) without touching Rust.

[dependencies]
nexo-poller = { version = "0.1.1", path = "../poller" }
nexo-extensions = { version = "0.1.1", path = "../extensions" }
nexo-auth = { version = "0.1.1", path = "../auth" }
nexo-llm = { version = "0.1.1", path = "../llm" }
base64           = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
