[package]
name = "nexo-poller-tools"
description   = "Built-in tools and builders for the Nexo poller (LLM turn, channel ops)."
version       = "0.1.2"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
# LLM-callable tools for the poller subsystem. Lives in its own crate
# so `nexo-core` can stay free of the `nexo-plugin-google`
# transitive dep that `nexo-poller` carries (would be a cycle:
# core → poller → plugin-google → core).

[dependencies]
nexo-core = { version = "0.2.0", path = "../core" }
nexo-llm = { version = "0.1.2", path = "../llm" }
nexo-poller = { version = "0.1.2", path = "../poller" }
async-trait  = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
